--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -89,19 +89,19 @@
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Login</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignIn/SignUp</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignOut</a></li>
+                    </ul>
+                    <!-- End Menu List -->
+                    <!-- Menu List -->                                
+                    <ul class="list-unstyled s-header__nav-menu">
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="user-dash.html">Kegiatan dan Pendaftaran</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="verifikasi.html">Verifikasi Pembayaran</a></li>
                     </ul>
                     <!-- End Menu List -->
                 </div>
             </nav>
             <!-- End Nav -->
-
-            <!-- Action -->
-            <ul class="list-inline s-header__action s-header__action--lb">
-                <li class="s-header__action-item"><a class="s-header__action-link -is-active" href="#">En</a></li>
-                <li class="s-header__action-item"><a class="s-header__action-link" href="#">Fr</a></li>
-            </ul>
-            <!-- End Action -->
 
             <!-- Action -->
             <ul class="list-inline s-header__action s-header__action--rb">
@@ -135,19 +135,18 @@
         <div class="g-container--md g-text-center--xs g-padding-y-150--xs">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" id="foto-profil" src="img/400x400/01.jpg" style="width: 200px; margin: auto; border-radius: 50%;" alt="Image">
+                    <img class="img-responsive" id="foto-profil" src="img/400x400/01.jpg" style="width: 200px; margin: auto; border-radius: 50%;" alt="Default Image">
                 </div>
                 <div class="col-sm-8 g-text-left--md">
-
-                    <h1 class="text-uppercase g-font-size-26--xs g-font-size-22--md g-font-size-36--lg g-color--white g-letter-spacing--1 g-margin-b-0--xs" id="nama-user">Attendant</h1>
-                    <p class="text-uppercase g-font-size-22--xs g-font-size-20--md g-font-size-28--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-5--xs" id="nama-instansi">PTIK</p>
-                    <p class="g-font-size-14--xs g-font-weight--100 g-color--white-opacity g-letter-spacing--1" id="email">attendant@itexpo.co.id</p>
+                    <h1 class="text-uppercase g-font-size-26--xs g-font-size-22--md g-font-size-36--lg g-color--white g-letter-spacing--1 g-margin-b-0--xs" id="nama-user">Username</h1>
+                    <p class="text-uppercase g-font-size-18--xs g-font-size-14--md g-font-size-20--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="nama-instansi">Asal Instansi</p>
+                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="email">email_user@itexpo.co.id</p>
+                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Kegiatan Anda : </p>
+                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Menunggu Verifikasi : </p>
+                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Selesai Verifikasi : </p>
                 </div>
-                <div class="col-sm-2">
-
-                    <a class="text-uppercase g-font-size-10--xs g-font-weight--100 g-color--white-opacity g-letter-spacing--1" id="agenda-user"><button type="button" class="text-uppercase g-font-size-10--xs s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-3--xs g-margin-b-5--xs g-margin-t-10--md g-margin-t-15--lg" style="width: 110px">Agenda Saya</button></a>
-
-                    <a class="text-uppercase g-font-size-10--xs g-font-weight--100 g-color--white-opacity g-letter-spacing--1" id="edit-link"><button type="button" class="text-uppercase g-font-size-10--xs s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-0--xs g-margin-b-5--xs" style="width: 110px">Profil Lengkap</button></a>
+                <div class="col-sm-2 g-text-right--md g-text-right--xs  ">
+                    <a><button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-brd g-radius--50 g-padding-x-3--xs g-margin-b-5--xs g-margin-t-10--md g-margin-t-15--lg">Edit Profile</button></a>
                 </div>
             </div>
 
@@ -160,13 +159,7 @@
     <!-- Masonry -->
     <div class="g-hor-divider__dashed--sky-light">
         <div class="container g-padding-y-30--xs">
-            <div class="s-portfolio">
-                <div id="menu-user" class="s-portfolio__filter-v1 cbp-l-filters-text cbp-l-filters-center">
-                    <a href="#" class="g-font-size-14--xs s-portfolio__filter-v1-item cbp-filter-item cbp-filter-item-active">Beranda</a>
-                    <a href="#" class="g-font-size-14--xs s-portfolio__filter-v1-item cbp-filter-item">Kegiatan</a>
-                    <a href="#" class="g-font-size-14--xs s-portfolio__filter-v1-item cbp-filter-item">Konfirmasi Pembayaran</a>
-                </div>
-            </div>
+            
         </div>
     </div>
     <!-- End Masonry -->
@@ -282,6 +275,11 @@
                                                 Registrasi
                                             </a>
                                         </li>
+                                        <li>
+                                            <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Web Desain" id="r-wd">
+                                                Informasi
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -298,8 +296,13 @@
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
                                             <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Jaringan" id="r-jar">
-                                                    Registrasi
-                                                </a>
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Web Desain" id="r-wd">
+                                                Informasi
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -317,8 +320,13 @@
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
                                             <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Short Movie" id="r-sm">
-                                                    Registrasi
-                                                </a>
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Web Desain" id="r-wd">
+                                                Informasi
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -336,8 +344,13 @@
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
                                             <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Poster" id="r-po">
-                                                    Registrasi
-                                                </a>
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Web Desain" id="r-wd">
+                                                Informasi
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -349,9 +362,6 @@
                 </div>
             </div>
             <!-- End Kompetisi -->
-
-
-
         </div>
     </div>
     <!-- End Mockup -->
@@ -379,7 +389,14 @@
                                 <span class="s-plan-v1__price-mark">Rp.</span>
                                 <span class="s-plan-v1__price-tag">50.000,00</span>
                             </div>
-                            <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-ui">Registrasi</button>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Informasi</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Registrasi</button>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -399,7 +416,14 @@
                                 <span class="s-plan-v1__price-mark">Rp.</span>
                                 <span class="s-plan-v1__price-tag">50.000,00</span>
                             </div>
-                            <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Registrasi</button>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Informasi</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Registrasi</button>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -419,7 +443,14 @@
                                 <span class="s-plan-v1__price-mark">Rp.</span>
                                 <span class="s-plan-v1__price-tag">50.000,00</span>
                             </div>
-                            <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-se">Registrasi</button>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Informasi</button>
+                                </li>
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" id="r-gu">Registrasi</button>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -436,6 +467,7 @@
                 <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
             </div>
             <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50" id="r-ml">Registrasi</a>
+            <a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50" id="r-ml">Informasi</a>
         </div>
     </div>
     <!-- End Parallax -->
@@ -526,7 +558,9 @@
                     <h4 class="s-header__logo-img s-header__logo-img-default" style="color:#13b1cd;">IT-EXPO</h4>
                 </div>
                 <div class="col-xs-6 g-text-right--xs">
-                    <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">Powered by: UNJ</p>
+                    <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">
+                        Powered by: <a href="http://www.keenthemes.com/">KeenThemes.com</a>
+                    </p>
                 </div>
             </div>
         </div>
