--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -31,7 +31,7 @@
 				
 				<h1 class="title"><b>IT-Expo Pendidikan Informatika UNJ</b></h1>
 				<br/>
-				<h2 class="title"><b>- Comming Soon -</b></h2>
+				<h2 class="title"><b>- Coming Soon -</b></h2>
 				<p class="desc font-white">Our website is currently undergoing scheduled maintenance.
 					We Should be back shortly. Thank you for your patience.</p>
 				
