--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -83,20 +83,13 @@
             <!-- Nav -->
             <nav class="s-header__nav js__scrollbar">
                 <div class="container-fluid">
-                    <!-- Menu List -->
+                    <!-- Menu List -->                                
                     <ul class="list-unstyled s-header__nav-menu">
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index.html">Beranda</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider -is-active" href="index.html">Beranda</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignIn/SignUp</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignOut</a></li>
-                    </ul>
-                    <!-- End Menu List -->
-                    <!-- Menu List -->
-                    <ul class="list-unstyled s-header__nav-menu">
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider -is-active" href="user-dash.html">Kegiatan dan Pendaftaran</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="verifikasi.html">Verifikasi Pembayaran</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Masuk / Daftar</a></li>
                     </ul>
                     <!-- End Menu List -->
                 </div>
@@ -262,7 +255,7 @@
                                 <div class="s-portfolio__caption-hover--cc">
                                     <div class="g-margin-b-25--xs">
                                         <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Desain Web</h3>
-                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                        <p class="g-color--white-opacity">Rp.50.000</p>
                                     </div>
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
@@ -281,7 +274,7 @@
                                 <div class="s-portfolio__caption-hover--cc">
                                     <div class="g-margin-b-25--xs">
                                         <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Jaringan</h3>
-                                        <p class="g-color--white-opacity">Rp.75.000,00</p>
+                                        <p class="g-color--white-opacity">Rp.75.000</p>
                                     </div>
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
@@ -300,7 +293,7 @@
                                 <div class="s-portfolio__caption-hover--cc">
                                     <div class="g-margin-b-25--xs">
                                         <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Short Movie</h3>
-                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                        <p class="g-color--white-opacity">Rp.50.000</p>
                                     </div>
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
@@ -320,7 +313,7 @@
                                 <div class="s-portfolio__caption-hover--cc">
                                     <div class="g-margin-b-25--xs">
                                         <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Desain Poster</h3>
-                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                        <p class="g-color--white-opacity">Rp.50.000</p>
                                     </div>
                                     <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                                         <li>
@@ -363,7 +356,7 @@
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
-                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                                <span class="s-plan-v1__price-tag">50.000</span>
                             </div>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>
@@ -387,7 +380,7 @@
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
-                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                                <span class="s-plan-v1__price-tag">50.000</span>
                             </div>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>
@@ -411,7 +404,7 @@
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
-                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                                <span class="s-plan-v1__price-tag">50.000</span>
                             </div>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>
@@ -511,8 +504,7 @@
                     <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
                     </div>
                     <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 text-right">
-                        <!-- <h3 class="g-font-size-18--xs g-color--white">Kasi Icon IT EXPO</h3> -->
-                        <img src="img/logo-itexpo-white.png" style="max-width:150px" />
+                        <img src="img/logo-itexpo-white.png" alt="logo_itexpo_2018" height="150">
                     </div>
                 </div>
             </div>
