--- a/production/login.html
+++ b/production/login.html
@@ -77,8 +77,7 @@
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignIn/SignUp</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignOut</a></li>
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Masuk / Daftar</a></li>
                         </ul>
                         <!-- End Menu List -->
                     </div>
@@ -254,10 +253,7 @@
                         <input type="text" class="form-control s-form-v3__input" placeholder="* Nama Lengkap" name="nama">
                     </div>
                     <div class="g-margin-b-30--xs">
-                        <input type="email" class="form-control s-form-v3__input" placeholder="* Email" name="email">
-                    </div>
-                    <div class="g-margin-b-30--xs">
-                        <input type="text" class="form-control s-form-v3__input" placeholder="* Nomor Telepon" name="kontak">
+                        <input type="date" class="form-control s-form-v3__input" placeholder="* Tanggal Lahir" name="tanggal_lahir">
                     </div>
                     <div class="g-margin-b-30--xs">
                         <select class="form-control s-form-v3__input" name="is_mahasiswa">
@@ -268,6 +264,12 @@
                     </div>
                     <div class="g-margin-b-30--xs">
                         <input type="text" class="form-control s-form-v3__input" placeholder="* Instansi/Universitas" name="instansi">
+                    </div>
+                    <div class="g-margin-b-30--xs">
+                        <input type="text" class="form-control s-form-v3__input" placeholder="* Nomor Telepon" name="kontak">
+                    </div>
+                    <div class="g-margin-b-30--xs">
+                        <input type="email" class="form-control s-form-v3__input" placeholder="* Email" name="email">
                     </div>
                     <div class="row g-margin-b-50--xs">
                         <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
@@ -309,7 +311,7 @@
                         <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
                         </div>
                         <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1">
-                            <h3 class="g-font-size-18--xs g-color--white">Kasi Icon IT EXPO</h3>
+                            <img src="img/logo-itexpo-white.png" alt="logo_itexpo_2018" height="150">
                         </div>
                     </div>
                 </div>
