--- a/production/verifikasi.html
+++ b/production/verifikasi.html
@@ -83,20 +83,13 @@
             <!-- Nav -->
             <nav class="s-header__nav js__scrollbar">
                 <div class="container-fluid">
-                    <!-- Menu List -->
+                    <!-- Menu List -->                                
                     <ul class="list-unstyled s-header__nav-menu">
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider -is-active" href="index.html">Beranda</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignIn/SignUp</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignOut</a></li>
-                    </ul>
-                    <!-- End Menu List -->
-                    <!-- Menu List -->                                
-                    <ul class="list-unstyled s-header__nav-menu">
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="user-dash.html">Kegiatan dan Pendaftaran</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="verifikasi.html">Verifikasi Pembayaran</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Masuk / Daftar</a></li>
                     </ul>
                     <!-- End Menu List -->
                 </div>
@@ -241,7 +234,7 @@
                     <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
                     </div>
                     <div class="col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1">
-                        <h3 class="g-font-size-18--xs g-color--white">Kasi Icon IT EXPO</h3>
+                        <img src="img/logo-itexpo-white.png" alt="logo_itexpo_2018" height="150">
                     </div>
                 </div>
             </div>
