--- a/production/edit-profil.html
+++ b/production/edit-profil.html
@@ -144,11 +144,33 @@
                     <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="email">email_user@itexpo.co.id</p>
 
                 </div>
-                <div class="col-sm-3 g-text-left--md g-text-center--xs g-margin-t-20--xs g-margin-t-0--md">
-                    <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="kegiatan-user">0</span> Kegiatan Diikuti</p>
-                    <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="not-verified">0</span> Menunggu Verifikasi</p>
-                    <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="verivied">0</span> Selesai Verifikasi</p>
-
+                <div class="col-sm-3 g-text-left--xs g-margin-t-20--xs g-margin-t-0--md">
+                    <table style="margin: 0 auto; width: 180px">
+                        <tr>
+                            <td>
+                                <span class="g-font-size-12--xs g-font-size-14--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Kegiatan Diikuti</span>
+                            </td>
+                            <td>
+                                <span class="g-font-size-26--xs g-font-size-18--md g-font-size-26--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1" id="kegiatan-user">0</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="g-font-size-12--xs g-font-size-14--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Menunggu Verifikasi</span>
+                            </td>
+                            <td>
+                                <span class="g-font-size-26--xs g-font-size-18--md g-font-size-26--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1" id="verifikasi">0</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="g-font-size-12--xs g-font-size-14--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Selesai Verifikasi</span>
+                            </td>
+                            <td>
+                                <span class="g-font-size-26--xs g-font-size-18--md g-font-size-26--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1" id="verified">0</span>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
