--- a/production/user-dash2.html
+++ b/production/user-dash2.html
@@ -277,6 +277,107 @@
                     <!-- End Masonry Grid -->
                 </div>
             </div>
+
+
+
+            <!-- Kompetisi -->
+            <div class="container g-padding-y-80--xs g-padding-y-125--xsm" id="js__scroll-to-section">
+                <div class="row g-margin-b-30--xs">
+                    <div class="col-sm-4">
+                        <div class="g-margin-t-20--md g-margin-b-40--xs">
+                            <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">IT EXPO</p>
+                            <h2 class="g-font-size-32--xs g-font-size-36--md">Kompetisi</h2>
+                            <p>Are you masters of most current technologies?<br>Lets enjoy things that you know you're good at.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-8">
+                        <!-- Kompetisi Gallery -->
+                        <div id="js__grid-portfolio-gallery" class="s-portfolio__paginations-v1 cbp">
+                            <!-- Item -->
+                            <div class="s-portfolio__item cbp-item motion graphic">
+                                <div class="s-portfolio__img-effect g-bg-color--sky-light">
+                                    <img src="img/web-desain-1.gif" style="max-height: 250px; width: auto; margin: auto" alt="Portfolio Image">
+                                </div>
+                                <div class="s-portfolio__caption-hover--cc">
+                                    <div class="g-margin-b-25--xs">
+                                        <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Desain Web</h3>
+                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                    </div>
+                                    <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                                        <li>
+                                            <button class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Web Desain" data-toggle="modal" data-target="#modal-web" id="r-wd">
+                                                Registrasi
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- Item -->
+                            <div class="s-portfolio__item cbp-item logos graphic">
+                                <div class="s-portfolio__img-effect g-bg-color--sky-light">
+                                    <img src="img/jaringan-1.gif" style="max-height: 250px; width: auto; margin: auto" alt="Portfolio Image">
+                                </div>
+                                <div class="s-portfolio__caption-hover--cc">
+                                    <div class="g-margin-b-25--xs">
+                                        <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Jaringan</h3>
+                                        <p class="g-color--white-opacity">Rp.75.000,00</p>
+                                    </div>
+                                    <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                                        <li>
+                                            <a class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Jaringan" data-toggle="modal" data-target="#modal-jaringan" id="r-jar">
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- Item -->
+                            <div class="s-portfolio__item cbp-item logos motion">
+                                <div class="s-portfolio__img-effect g-bg-color--sky-light">
+                                    <img src="img/MM-1.gif" style="max-height: 250px; width: auto; margin: auto" alt="Portfolio Image">
+                                </div>
+                                <div class="s-portfolio__caption-hover--cc">
+                                    <div class="g-margin-b-25--xs">
+                                        <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Short Movie</h3>
+                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                    </div>
+                                    <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                                        <li>
+                                            <a class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Short Movie" data-toggle="modal" data-target="#modal-movie" id="r-sm">
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                        <li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- Item -->
+                            <div class="s-portfolio__item cbp-item graphic g-bg-color--sky-light">
+                                <div class="s-portfolio__img-effect">
+                                    <img src="img/desain-grafis-1.gif" style="max-height: 250px; width: auto; margin: 0 auto" alt="Portfolio Image">
+                                </div>
+                                <div class="s-portfolio__caption-hover--cc">
+                                    <div class="g-margin-b-25--xs">
+                                        <h3 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Desain Poster</h3>
+                                        <p class="g-color--white-opacity">Rp.50.000,00</p>
+                                    </div>
+                                    <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                                        <li>
+                                            <a class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-padding-x-10--xs g-margin-b-5--xs" data-title="Poster" data-toggle="modal" data-target="#modal-poster" id="r-po">
+                                                Registrasi
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- End Item -->
+                        </div>
+                        <!-- End Kompetisi Gallery -->
+                    </div>
+                </div>
+            </div>
+            <!-- End Kompetisi -->
         </div>
     </div>
     <!-- End Mockup -->
@@ -374,6 +475,102 @@
         </div>
     </div>
     <!-- End Mockup -->
+
+    <!-- Plan -->
+    <div class="g-bg-color--sky-light">
+        <div class="container g-padding-y-80--xs g-padding-y-125--xsm">
+            <div class="g-text-center--xs g-margin-b-80--xs">
+                <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Seminar dan Workshop</p>
+                <h2 class="g-font-size-32--xs g-font-size-36--md">Expand Your Knowledge</h2>
+            </div>
+
+            <div class="row g-row-col--5">
+                <!-- Plan -->
+                <div class="col-md-4 g-margin-b-10--xs g-margin-b-0--lg">
+                    <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".1s">
+                        <div class="s-plan-v1 g-text-center--xs g-bg-color--white g-padding-y-100--xs">
+                            <i class="g-display-block--xs g-font-size-40--xs g-color--primary g-margin-b-30--xs ti-layout"></i>
+                            <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">UI/UX</h3>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>Workshop</li>
+                                <li>Oleh : Hafiezar</li>
+                            </ul>
+                            <div class="g-margin-b-40--xs">
+                                <span class="s-plan-v1__price-mark">Rp.</span>
+                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                            </div>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" data-toggle="modal" data-target="#modal-uiux" id="r-gu">Registrasi</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Plan -->
+
+                <!-- Plan -->
+                <div class="col-md-4 g-margin-b-10--xs g-margin-b-0--lg">
+                    <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".2s">
+                        <div class="s-plan-v1 g-text-center--xs g-bg-color--white g-padding-y-100--xs">
+                            <i class="g-display-block--xs g-font-size-40--xs g-color--primary g-margin-b-30--xs ti-pencil-alt"></i>
+                            <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">Guru TIK</h3>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>Workshop</li>
+                                <li>Oleh : Hafiezar</li>
+                            </ul>
+                            <div class="g-margin-b-40--xs">
+                                <span class="s-plan-v1__price-mark">Rp.</span>
+                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                            </div>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" data-toggle="modal" data-target="#modal-guru" id="r-gu">Registrasi</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Plan -->
+
+                <!-- Plan -->
+                <div class="col-md-4">
+                    <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="s-plan-v1 g-text-center--xs g-bg-color--white g-padding-y-100--xs">
+                            <i class="g-display-block--xs g-font-size-40--xs g-color--primary g-margin-b-30--xs ti-microphone"></i>
+                            <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">Teknologi</h3>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>Seminar</li>
+                                <li>Oleh : Hafiezar</li>
+                            </ul>
+                            <div class="g-margin-b-40--xs">
+                                <span class="s-plan-v1__price-mark">Rp.</span>
+                                <span class="s-plan-v1__price-tag">50.000,00</span>
+                            </div>
+                            <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
+                                <li>
+                                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs" data-toggle="modal" data-target="#modal-seminar" id="r-sem">Registrasi</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Plan -->
+            </div>
+        </div>
+    </div>
+    <!-- End Plan -->
+
+    <!-- Parallax -->
+    <div class="js__parallax-window" style="background: url(img/ml.jpg) 50% 0 no-repeat fixed;">
+        <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
+            <div class="g-margin-b-80--xs">
+                <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
+            </div>
+            <a class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50" data-toggle="modal" data-target="#modal-esport" id="r-ml">Registrasi</a>
+        </div>
+    </div>
+    <!-- End Parallax -->
 
     <!-- Clients -->
     <div class="g-padding-y-80--xs g-padding-y-125--sm">
