--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>IT-Expo Pendidikan Informatika UNJ</title>
-    <meta name="keywords" content="HTML5 Theme" />
-    <meta name="description" content="Megakit - HTML5 Theme">
-    <meta name="author" content="keenthemes.com">
+    <meta name="keywords" content="IT-Expo Pendidikan Informatika UNJ" />
+    <meta name="description" content="Revolusi IT untuk Pendidikan di Era Revolusi Industri 4.0">
+    <meta name="author" content="Pendidikan Informatika UNJ">
 
     <!-- Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i|Montserrat:400,700" rel="stylesheet">
@@ -473,7 +473,7 @@
         <div class="g-container--sm">
             <div class="g-text-center--xs g-margin-b-80--xs">
                 <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
-                <p class="g-font-size-18--md">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
             </div>
         </div>
         <div class="g-container--md">
